[package]
name = "string_templater"
description = "A string templater to inject values in a string template."
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/FriquetLuca/string_templater"
authors = [ "Friquet Luca" ]

[lib]
name = "string_templater"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
thiserror = "1"
